--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ matrix:
   allow_failures:
     - rvm: ruby-head
 sudo: false
+addons:
+  code_climate:
+    repo_token: c250bc1551dd13a07efdd5bc8a594924f6f762f7be9762e79da0c8f065cf93dd
