--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,17 @@
 Documentation:
   Enabled: false
+
+Metrics/LineLength:
+  Max: 90
+
+Metrics/MethodLength:
+  Max: 20
+
+Metrics/AbcSize:
+  Max: 19
+
+# Because of the way that blocks are used in RSpecs can end up being long when
+# example groups are nested or many examples are checked.
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
