--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,20 @@ rvm:
   - 2.0
   - 2.1
   - 2.2
-  - 2.3.3
-  - 2.4.0
+  - 2.3
+  - 2.4
   - ruby-head
 matrix:
   allow_failures:
     - rvm: ruby-head
+  exclude:
+    - rvm: 2.4
+      os: osx
+    - rvm: ruby-head
+      os: osx
+os:
+  - linux
+  - osx
 sudo: false
 addons:
   code_climate:
