--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,13 @@ rvm:
   - 2.4
   - 2.5
   - ruby-head
+  - jruby
 matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: 2.4
       os: osx
+    - rvm: jruby
 os:
   - linux
   - osx
