Rubocop clean-up changes
* change the exception rescue variable from "boom" to "e"
* add a cop exception for block length in gemspecs
* disable module length cop on SugarUtils::File

Additionally, limiting rubocop to a version which still supports Ruby2.2.
This limit can be removed when we drop support for Ruby2.2.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,8 +16,10 @@ RSpec/EmptyExampleGroup:
 
 # Because of the way that blocks are used in RSpecs can end up being long when
 # example groups are nested or many examples are checked.
+# A similar pattern exists in the DSL for gemspec files.
 Metrics/BlockLength:
   Exclude:
+    - '*.gemspec'
     - 'spec/**/*'
 
 RSpec/ExpectInHook:
