Fix LicenceFinder again

--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -5,19 +5,19 @@
     :why: 
     :versions: []
     :when: 2018-06-13 15:20:17.351348000 Z
-- - :whitelist
+- - :permit
   - Apache 2.0
   - :who: Andrew Sullivan Cant <mail@andrewsullivancant.ca>
     :why: SugarCRM's primary approved open source license
     :versions: []
     :when: 2018-06-18 19:28:33.314061000 Z
-- - :whitelist
+- - :permit
   - MIT
   - :who: Andrew Sullivan Cant <mail@andrewsullivancant.ca>
     :why: SugarCRM's secondary approved open source license
     :versions: []
     :when: 2018-06-13 15:18:36.240771000 Z
-- - :whitelist
+- - :permit
   - BSD
   - :who: Andrew Sullivan Cant <mail@andrewsullivancant.ca>
     :why: SugarCRM's secondary approved open source license
