--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,5 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
         bundler: '1.17'
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - run: gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
     - run: bundle exec rake
