--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
+        bundler: 'none'
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - run: gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
     - run: gem install bundler -v '< 2'
