--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler: 'none'
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - run: gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
     - run: gem install bundler -v '< 2'
+    - run: bundle install
     - run: bundle exec rake
