--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby: ['2.2', '2.3', '2.4.5', '2.5.4', '2.6.2']
+        ruby: ['2.6.2']
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
