--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,5 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
-        bundler: 'none'
-    - run: gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
-    - run: gem install bundler -v '< 2'
-    - run: bundle install
+        bundler-cache: true
     - run: bundle exec rake
