Upgrade rubocop and make corrections
I am allowing rubocop to float to the latest Rubocop version. It might
cause some unexpected failures, but it will help with keep the code
style up-to date.

Some details:
* make Layout/HashAlignment tabular
  - because I LOVE TABLES!
* enable New Cops
* remove Documentation disable
* exclude HashConversion in specs, because Hash[] is needed by
  rspec-tabular
* add Deparment to some disable comments

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,11 +2,13 @@ require: rubocop-rspec
 
 AllCops:
   TargetRubyVersion: 2.6
+  NewCops: enable
 
-Documentation:
-  Enabled: false
+Layout/HashAlignment:
+  EnforcedHashRocketStyle: table
+  EnforcedColonStyle:      table
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 150
   Include:
     - 'spec/**/*'
@@ -30,3 +32,9 @@ RSpec/MessageSpies:
 
 RSpec/EmptyLineAfterExample:
   Enabled: false
+
+# NOTE: The rspec-tabular commands get confused with the default syntax is used
+# for Hashes, so disabling this check for specs so that `Hash[]` can be used.
+Style/HashConversion:
+  Exclude:
+    - 'spec/**/*'
