Add Code Climate coverage reporting to CI
Using the `paambatti/codeclimate-action` which will automatically download
and execute the Code Climate test reporter.

* https://github.com/paambaati/codeclimate-action
* https://github.com/marketplace/actions/code-climate-coverage-action
* https://github.com/codeclimate/test-reporter

Additionally, I found that the test reporter does not reliably read the
simplecov JSON format, even though it will attempt to use it by default.

So I have added the lcov formatter, and configured the reporter to use
it.

* https://github.com/fortissimo1997/simplecov-lcov

Finally, the CC_TEST_REPORTER_ID is stored as a repository secret
(i.e., `${{ secrets.CC_TEST_REPORTER_ID }}`) and will need to be added
before this action will work as expected.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,3 +15,23 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
     - run: bundle exec rake
+  coverage:
+    needs: [ test ]
+    name: coverage
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '2.6'
+        bundler-cache: true
+    - run: bundle exec rake
+      env:
+        CUCUMBER_PUBLISH_TOKEN: ${{ secrets.CUCUMBER_PUBLISH_TOKEN }}
+    - uses: paambaati/codeclimate-action@v3.2.0
+      env:
+        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      with:
+        coverageLocations: |
+          ${{ github.workspace }}/coverage/lcov/*.lcov:lcov
+        debug: true
