Upgrade minimum required Ruby to v3.1.2
I am considering this the correct minimum Ruby because it is the Ruby
which is available in Debian 12 (bookworm), which is current in January
2025.

* https://www.debian.org/releases/
* https://packages.debian.org/bookworm/ruby/

Some rubocop refactoring, such as:
* remove the bundler dependency, becuase it is built in now

Github Action script and CI updates:
* drop the unsupported Rubies and added 3.4
* make some updates related to testing Ruby v3.4
  - ignore white space when comparing strignfied Hash values in
    Cucumber because white space is added to this output in 3.5
    * https://rubyreferences.github.io/rubychanges/3.4.html#inspect-rendering-have-been-changed
    * https://bugs.ruby-lang.org/issues/20433
* make some updates related to testing Ruby head (i.e. v3.5)
  - add `logger` as a development dependency because it is dropped from
    the standard library in Ruby v3.5
  - add `irb` as a development dependency becuase it is needed by
    `faker` in Ruby 3.5
* remove ruby version specification from the `coverage` step, because it
  should use the default/minimum Ruby specified in the `.ruby-version`
* update action/checkout step to v4
* update paambatti/codeclimate to v9.0.0

Update some Cucumber steps to handle the addition of more whitespace to
stringified Hashes in Ruby 3.4. Any whitespace will be ignored on this
check for any version.

Try to exclude running the Cucumber/Aruba feature integration tests on
Ruby head. Neither Cucumber or Aruba properly support Ruby head/3.5 at the
moment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,29 +9,29 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby: ['2.6', '2.7', '3.0', '3.1', '3.2', head]
+        ruby: ['3.1', '3.2', '3.4', head]
+    continue-on-error: ${{ endsWith(matrix.ruby, 'head') }}
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
-    - run: bundle exec rake
+    - run: bundle exec rake ${{ endsWith(matrix.ruby, 'head') && 'spec' || 'tests' }}
   coverage:
     needs: [ test ]
     name: coverage
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '2.6'
         bundler-cache: true
     - run: bundle exec rake
       env:
         CUCUMBER_PUBLISH_TOKEN: ${{ secrets.CUCUMBER_PUBLISH_TOKEN }}
-    - uses: paambaati/codeclimate-action@v3.2.0
+    - uses: paambaati/codeclimate-action@v9.0.0
       env:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
